common browse field alignment issue fixed

--- a/src/assets/scss/base/_form.scss
+++ b/src/assets/scss/base/_form.scss
@@ -44,17 +44,19 @@ input[type='number']::-webkit-outer-spin-button {
     label.custom-file-label {
         box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.02),
             0px 1px 3px rgba(50, 50, 93, 0.1) !important;
-        padding-top: 11px;
+        padding-top: 13px;
         color: $grey-medium;
         padding-right: 70px;
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
+        text-transform: capitalize;
         &:after {
             background-color: transparent !important;
             color: $primary;
             top: 5px;
             font-size: 0.875rem;
+            border: none !important;
         }
     }
 }
